# FlowQ

./: .gitignore  LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: lint.yaml
FlowQ/client/: FlowQlient.py  __init__.py
FlowQ/cluster/: FlowQluster.py  __init__.py  __main__.py
